--- a/backend_neurasky/.env
+++ b/backend_neurasky/.env
@@ -1,6 +1,8 @@
 # backend_neurasky/.env
-DB_USER=jiayuan
-DB_PASSWORD=jiayuan03
-DB_HOST=localhost
+DB_USER=neurasky
+DB_PASSWORD=Neurasky@123
+DB_HOST=DESKTOP-0VCFEM5\Dell # Or your server name, e.g., DESKTOP-123\SQLEXPRESS
 DB_NAME=neurasky_db
-# Add other secrets like Twilio keys later
+DB_DRIVER=ODBC Driver 17 for SQL Server # Check your ODBC Drivers app for this name
+
+SECRET_KEY=becc0f90c5a14350a7fcbefaa9499292303aa3c233ff559f
