--- a/backend_neurasky/.env
+++ b/backend_neurasky/.env
@@ -1,6 +1,6 @@
-DB_USER=neurasky
-DB_PASSWORD=Neurasky@123
-DB_HOST=DESKTOP-0VCFEM5\Dell 
+DB_USER=root
+DB_PASSWORD=9999
+DB_HOST=localhost
 DB_NAME=neurasky_db
 DB_PORT=3306  # Add this line
 SECRET_KEY=becc0f90c5a14350a7fcbefaa9499292303aa3c233ff559f
