--- a/frontend_neurasky/package.json
+++ b/frontend_neurasky/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.546.0",
-    "next": "16.0.0",
+    "next": "^16.0.2",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
