--- a/frontend_neurasky/package.json
+++ b/frontend_neurasky/package.json
@@ -23,11 +23,13 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "next": "^16.0.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.3.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.1"
@@ -38,6 +40,7 @@
     "@types/react": "19.2.2",
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
