--- a/frontend_neurasky/package.json
+++ b/frontend_neurasky/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "next": "^16.0.10",
@@ -49,5 +49,10 @@
     "eslint-config-next": "^16.0.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "react": "$react"
+    }
   }
 }
