--- a/frontend_neurasky/package.json
+++ b/frontend_neurasky/package.json
@@ -33,6 +33,7 @@
     "react": "^19.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.2.3",
+    "react-is": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "recharts": "^3.3.0",
     "sonner": "^2.0.3",
