--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -1,4 +1,4 @@
-name: "Terraform Destroy"
+name: Terraform Destroy
 
 on:
   workflow_dispatch:
@@ -12,22 +12,18 @@ permissions:
   contents: read
 
 env:
-  TF_LOG: INFO
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: 'ap-southeast-1'
+  AWS_REGION: ap-southeast-1
 
 jobs:
-  terraform-destroy:
-    name: "Terraform Destroy"
+  destroy:
+    name: Destroy Terraform Infrastructure
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: ./terraform
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Verify Confirmation
@@ -36,13 +32,22 @@ jobs:
           echo "Error: You must type 'destroy' to confirm destruction."
           exit 1
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.5.7
 
-      - name: Terraform Init
-        run: terraform init
+      - name: Initialize Terraform (load remote state)
+        run: terraform init -reconfigure -upgrade
 
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve -input=false
+      - name: Terraform Destroy (Auto Approve)
+        env:
+            TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
+        run: terraform destroy -auto-approve
