--- a/backend_neurasky/Dockerfile
+++ b/backend_neurasky/Dockerfile
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install -y \
     pkg-config \
     default-libmysqlclient-dev \
     build-essential \
+    libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Install dependencies
