--- a/backend_neurasky/Dockerfile
+++ b/backend_neurasky/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && apt-get install -y \
     default-libmysqlclient-dev \
     build-essential \
     libgomp1 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Install dependencies
