--- a/.github/workflows/terraform-deploy.yaml
+++ b/.github/workflows/terraform-deploy.yaml
@@ -56,6 +56,8 @@ jobs:
         env:
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
+          TF_VAR_aws_ses_user: ${{ secrets.AWS_SES_USER }}
+          TF_VAR_aws_ses_password: ${{ secrets.AWS_SES_PASSWORD }}
 
         run: terraform plan -out=tfplan
 
@@ -64,4 +66,6 @@ jobs:
         env:
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
+          TF_VAR_aws_ses_user: ${{ secrets.AWS_SES_USER }}
+          TF_VAR_aws_ses_password: ${{ secrets.AWS_SES_PASSWORD }}
         run: terraform apply -auto-approve tfplan
